selfhost/test/parser/bindingdecl_error_bad_expr.out
Error at %FILE_NAME%:1:9
Unexpected token 'val':
  |  var a = val b
             ^